Add mathematical dependencies and transform testing
- Integrate Numba for high-performance numerical computing
- Add Lark dependency for expression parsing capabilities
- Implement transform testing functionality in CLI
- Expand mathematical infrastructure for quantitative analysis

--- a/Agentic-Quant-Hedge-Fund/pyproject.toml
+++ b/Agentic-Quant-Hedge-Fund/pyproject.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
   "numpy>=1.26",
+  "numba>=0.59",
   "typer>=0.12",
+  "lark>=1.1",
 ]
