--- a/Agentic-Quant-Hedge-Fund/pyproject.toml
+++ b/Agentic-Quant-Hedge-Fund/pyproject.toml
@@ -5,6 +5,7 @@ requires-python = ">=3.11"
 dependencies = [
   "numpy>=1.26",
   "numba>=0.59",
+  "polars>=0.20",
   "typer>=0.12",
   "lark>=1.1",
 ]
