--- a/Agentic-Quant-Hedge-Fund/pyproject.toml
+++ b/Agentic-Quant-Hedge-Fund/pyproject.toml
@@ -3,11 +3,12 @@ name = "agentic-quant"
 version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
+  "polars>=0.20",
   "numpy>=1.26",
   "numba>=0.59",
-  "polars>=0.20",
-  "typer>=0.12",
   "lark>=1.1",
   "jinja2>=3.1",
+  "typer>=0.12",
   "requests>=2.32",
+  "rich>=13.7",
 ]
