feat: Enhance frontend with LaTeX support and update dependencies
- Added support for rendering LaTeX in chat messages using React Markdown, remark-math, and rehype-katex.
- Updated package.json to include new dependencies: katex, react-markdown, rehype-katex, and remark-math.
- Integrated typography plugin for Tailwind CSS in index.css.
- Updated ChatInterface component to preprocess LaTeX content.
- Modified ThinkingProcess component text for clarity.
- Added Python-related entries to .gitignore.
- Removed unused Python scripts from the server directory.

--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,13 @@ prisma/.env
 *.tsbuildinfo
 tsconfig.tsbuildinfo
 
+## Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
 # Misc
 .env.backup
 .env.save
